<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/numero1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblNumero1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/numero1"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtNumero1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/number_hint"
            android:inputType="text"
            android:textAlignment="textEnd" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/numero2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblNumero2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/numero2"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtNumero2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/number_hint"
            android:inputType="text"
            android:textAlignment="textEnd" />

    </LinearLayout>

    <TextView
        android:id="@+id/lblResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:padding="40dp"
        android:textAlignment="center"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="60sp"
        android:textStyle="bold" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSuma"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="100dp"
            android:layout_height="90dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/blue"
            android:fontFamily="@font/caveat_brush"
            android:text="@string/suma"
            android:textSize="34sp" />

        <Button
            android:id="@+id/btnResta"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="100dp"
            android:layout_height="90dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/blue"
            android:fontFamily="@font/caveat_brush"
            android:text="@string/resta"
            android:textSize="34sp" />

        <Button
            android:id="@+id/btnMultiplicacion"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="100dp"
            android:layout_height="90dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/blue"
            android:fontFamily="@font/caveat_brush"
            android:text="@string/multiplicacion"
            android:textSize="34sp" />

        <Button
            android:id="@+id/btnDivision"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="100dp"
            android:layout_height="90dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/blue"
            android:fontFamily="@font/caveat_brush"
            android:text="@string/division"
            android:textSize="34sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnBorrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/design_default_color_error"
        android:text="@string/borrar"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="0dp" />
</LinearLayout>